# bevy_2settings

./: Cargo.toml  LICENSE  output.rs  readme.md  settings.toml
bevy_2settings/: Cargo.toml  readme.md
bevy_2settings/src/: lib.rs
bevy_2settings/src/configurators/: mod.rs  toml.rs
bevy_2settings_macro/: Cargo.toml
bevy_2settings_macro/src/: lib.rs  stolen_code.rs
testing/: Cargo.toml
testing/src/: main.rs
