[package]
name = "bevy_2settings"
version = "0.0.1"
edition = "2024"
authors = ["CoolSlimbo (Luke)"]
repository = "https://github.com/CoolSlimbo/bevy_2settings"
license = "MIT"
description = "A simple settings system for bevy"
documentation = "https://docs.rs/bevy_2settings/latest/bevy_2settings/"
readme = "../readme.md"
keywords = ["bevy", "settings"]


[dependencies]
bevy_2settings_macro = { path = "../bevy_2settings_macro", version = "0.0.1" }
bevy = "0.16"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
