[package]
name = "bevy_2settings_macro"
version = "0.0.1"
edition = "2024"
authors = ["CoolSlimbo (Luke)"]
repository = "https://github.com/CoolSlimbo/bevy_2settings"
license = "MIT"
description = "A simple settings system for bevy"
documentation = "https://docs.rs/bevy_2settings/latest/bevy_2settings/"
readme = "../readme.md"
keywords = ["bevy", "settings"]

[lib]
proc-macro = true

[dependencies]
darling = "0.20.11"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["extra-traits"] }
